--- a/static/stylesheets/subclass-style.css
+++ b/static/stylesheets/subclass-style.css
@@ -26,6 +26,11 @@ table {
     visibility: hidden;
 }
 
+.section-number-3 {
+    display: none;
+    visibility: hidden;
+}
+
 li {
     margin-bottom: 1rem;
 }
